--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,28 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_simple_calculator">Simple Calculator</string>
+    <string name="menu_scientific_calculator">Scientific Calculator</string>
+    <string name="menu_measurement_converter">Measurement Converter</string>
+
+    <string name="button_ac">AC</string>
+    <string name="button_percentage">%</string>
+    <string name="button_divide">÷</string>
+    <string name="button_multiply">x</string>
+    <string name="button_decrease">-</string>
+    <string name="button_add">+</string>
+    <string name="button_equal">=</string>
+    <string name="button_one">1</string>
+    <string name="button_two">2</string>
+    <string name="button_three">3</string>
+    <string name="button_four">4</string>
+    <string name="button_five">5</string>
+    <string name="button_six">6</string>
+    <string name="button_seven">7</string>
+    <string name="button_height">8</string>
+    <string name="button_nine">9</string>
+    <string name="button_zero">0</string>
+    <string name="button_dot">.</string>
+    <string name="button_double_zero">00</string>
+
 </resources>
