--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,15 @@
 <resources>
     <string name="app_name">Calculator</string>
-    <string name="title_activity_general_calculator">GeneralCalculatorActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_activity_calculator">Calculator Activity</string>
+    <string name="empty_expression">Empty Expression!</string>
+    <string name="generic_error">Error!</string>
+    <string name="evaluate_error">Evaluate Error!</string>
+    <string name="arithmetic_error">Arithmetic Error!</string>
+    <string name="char_error">Last char error!</string>
+    <string name="divison_error">Division Error!</string>
+    <string name="historic_deleted">History successfully deleted!</string>
 
-    <string name="menu_simple_calculator">Simple Calculator</string>
-    <string name="menu_scientific_calculator">Scientific Calculator</string>
-    <string name="menu_measurement_converter">Measurement Converter</string>
+
 
     <string name="button_ac">AC</string>
     <string name="button_percentage">%</string>
@@ -32,9 +31,6 @@
     <string name="button_dot">.</string>
     <string name="button_double_zero">00</string>
 
-    <string name="error">Error</string>
-    <string name="evaluate_error">Evaluate Error</string>
-    <string name="error_arithmetic">Error Arithmetic</string>
 
 
 </resources>
